<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_active"
            android:icon="@drawable/ic_dashboard_24"
            android:title="@string/active_logs_title" />
        <item
            android:id="@+id/drawer_history"
            android:icon="@drawable/ic_history_24"
            android:title="@string/history_title" />
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/profile_title" />
    </group>

    <item android:title="@string/admin_section_title">
        <menu>
            <item
                android:id="@+id/drawer_staff"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/staff_management_title" />
            <item
                android:id="@+id/drawer_locations"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/location_management_title" />
            <item
                android:id="@+id/drawer_audit"
                android:icon="@android:drawable/ic_menu_recent_history"
                android:title="@string/audit_log_title" />
        </menu>
    </item>

    <item
        android:id="@+id/drawer_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/logout" />
</menu>
